# MLCpp

./: CMakeLists.txt  README.md
KNN/: CMakeLists.txt
KNN/include/: knn.hpp
KNN/src/: knn_sandbox.cpp  main.cpp
NeuralNetwork/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt
NeuralNetwork/include/: .Activation.hpp.swp  .CommonData.hpp.swp  .Layer.hpp.swo  .Layer.hpp.swp  .Network.hpp.swp  .Neuron.hpp.swp  Activation.hpp  CommonData.hpp  Layer.hpp  Network.hpp  Neuron.hpp
NeuralNetwork/src/: .Activation.cpp.swp  .Layer.cpp.swp  .Neuron.cpp.swp  Activation.cpp  Layer.cpp  Neuron.cpp  main.cpp
data/: file_reader  file_reader.cpp  file_reader.py
data/file_reader.dSYM/Contents/: Info.plist
data/file_reader.dSYM/Contents/Resources/DWARF/: file_reader
documentation/: network.drawio
include/: .DataHandler.hpp.swp  .Features.hpp.swp  DataHandler.hpp  DataLoader.hpp  Features.hpp  Matrix2D.hpp
src/: .sandbox.cpp.swp
